fixed answers button width overflow

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ main h1 {
     gap: 0.8em;
     margin-bottom: 1em;
     width: 80vw;
+    flex-wrap: wrap;
 }
 
 .answersButton {
